Edited Day_01 with CSS

--- a/Day_01/index.html
+++ b/Day_01/index.html
@@ -2,13 +2,18 @@
 <html>
 	<head>
 		<title>30DaysOfJavaScript</title>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
-		<h1>Day : 01</h1>
+			<h1>Day : 01</h1>
 		<script src="./introduction.js"></script>
 		<script src="./variable.js"></script>
-		<button onclick="alert('Welcome to 30 Days Of JavaScript!')">Click</button>
+		<div class="click-button">
+			<button onclick="alert('Welcome to 30 Days Of JavaScript!')">Click</button>
+		</div>
 		<br><br><br><br>
-		<a href="../Day_02/index.html"><button>Day 02  &gt;&gt;</button></a>
+		<div class="navigate-to-page">
+			<a href="../Day_02/index.html"><button>Day 02  &gt;&gt;</button></a>
+		</div>
 	</body>
 </html>
