On the 2nd day of JavaScript, level 1 was done, css edits were made.

--- a/Day_02/index.html
+++ b/Day_02/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
 	<title>30DaysOfJavaScript</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Day : 02</h1>
-	<h2>Data Types</h2>
+	<div class="main">
+		<div class="head">
+			<h1>Day : 02</h1>
+		</div>
+		<div class="subject-name">
+			<h2>Data Types</h2>
+		</div>
+		<div class="buttons">
+			<a href="../Day_01/index.html"><button class="button">&lt;&lt; Day 01</button></a>
+			<a href="../Day_03/index.html"><button class="button">Day 03 &gt;&gt;</button></a>
+		</div>
+	</div>
 	<script src="./data-types.js"></script>
-
-	<br><br>
-	<a href="../Day_01/index.html"><button>&lt;&lt; Day 01</button></a>
-	<a href="../Day_03/index.html"><button>Day 03 &gt;&gt;</button></a>
 </body>
 </html>
