--- a/Day_02/index.html
+++ b/Day_02/index.html
@@ -13,8 +13,8 @@
 			<h2>Data Types</h2>
 		</div>
 		<div class="buttons">
-			<a href="../Day_01/index.html"><button class="button">&lt;&lt; Day 01</button></a>
-			<a href="../Day_03/index.html"><button class="button">Day 03 &gt;&gt;</button></a>
+			<a href="../Day_01/index.html"><div class="button">&lt;&lt; Day 01</div></a>
+			<a href="../Day_03/index.html"><div class="button">Day 03 &gt;&gt;</div></a>
 		</div>
 	</div>
 	<script src="./data-types.js"></script>
