All exercises of the 3rd day are completed.

--- a/Day_03/index.html
+++ b/Day_03/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
 	<title>30DaysOfJavaScript</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1>Day : 03</h1>
-	<br><br><br><br><br>
-	<a href="../Day_02/index.html"><button>&lt;&lt;  Day 02</button></a>
+	<div>
+		<a href="../Day_02/index.html"><div>&lt;&lt;  Day 02</div></a>
+		<a href="../Day_04/index.html"><div>&lt;&lt;  Day 04</div></a>
+	</div>
+	<script src="./thirdDay.js"></script>
 </body>
 </html>
