Some promts have been removed from comments

--- a/Day_03/index.html
+++ b/Day_03/index.html
@@ -8,7 +8,7 @@
 	<h1>Day : 03</h1>
 	<div>
 		<a href="../Day_02/index.html"><div>&lt;&lt;  Day 02</div></a>
-		<a href="../Day_04/index.html"><div>&lt;&lt;  Day 04</div></a>
+		<a href="../Day_04/index.html"><div>Day 04 &gt;&gt;</div></a>
 	</div>
 	<script src="./thirdDay.js"></script>
 </body>
