--- a/Day_05/index.html
+++ b/Day_05/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="main">
 		<div class="name">
-			Emre Şimşek
+			Day : 05
 		</div>
 		<div class="subject">
 			Arrays
@@ -20,6 +20,8 @@
 			<a href="../Day_06/index.html">Day 06 &gt;&gt;</a>
 		</div>
 	</div>
-	<script src="../Day_05/arrays.js"></script>
+	<script type="module" src="arrays.js"></script>
+	<script src="countries.js"></script>
+	<script src="web_tecs.js"></script>
 </body>
 </html>
